# repo

./: README.md
my-token/: .gitignore  Cargo.toml  README.md
my-token/spells/: mint-nft.yaml  mint-token.yaml  send.yaml
my-token/src/: lib.rs  main.rs
